# MATRIX

./: .Matrix.hpp.swp  .gitignore  CMakeLists.txt  Matrix.cpp  Matrix.hpp  README.md  main.cpp  makefile  test
matrix/: AbstractMatrix.hpp  abstract_matrix.hpp  matrix.hpp  matrix1d.hpp  matrix2d.hpp  matrix3d.hpp  old_Matrix.hpp
old/: Matrix.hpp
test.dSYM/Contents/Resources/DWARF/: test
tests/: tests.cpp  tests_matrix1d.cpp  tests_matrix2d.cpp  tests_matrix3d.cpp
